--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main class="main">
       <div class="first-section">
         <div class="left-section">
-          I am <span class="name">Moses</span>
+          I am <span class="name">Roboo</span>
           <div>and I am passinate for</div>
           <div>building <span id="animate"></span></div>
         </div>
@@ -44,7 +44,18 @@
           <img src="./public/assets/pngwing3.png" alt="" />
         </div>
       </div>
-      <div class="second-section"></div>
+      <hr>
+      <section class="second-section">
+        <span class="text-exp">What I have done so far</span>
+        <h3 class="exp">Work Experience</h3>
+        <div class="exp-timeline">
+          <div class="exp-timeline-landmarks"></div>
+          <div class="exp-timeline-landmarks"></div>
+          <div class="exp-timeline-landmarks"></div>
+          <div class="exp-timeline-landmarks"></div>
+          <div class="exp-timeline-landmarks"></div>
+        </div>
+      </section>
     </main>
   </body>
   <script>
